src/test/deca/context/valid/created/testOpComp/equalsClass.deca
class A{
    int x;
}
class B{
    int y;
}
{
    A a = new A();
    B b = new B();
    if(a == b){
        println("Oups");
    } 
    else{
        println("super!");
    }
}