src/test/deca/context/invalid/created/testOpCmp/CmpClassInt.deca
class A{
    int x;
}
{
    A a = new A();
    if(a == 10){
        println("Oups");
    }
}